Added an alias to wooden doors.

--- a/src/config.yml
+++ b/src/config.yml
@@ -13,6 +13,7 @@ idmapping:
     mcid: skull
   WOOD_DOOR:
     mcid: wooden_door
+    alias: Oak Door
   FIREWORK:
     mcid: fireworks
   GOLD_HELMET:
