--- a/src/config.yml
+++ b/src/config.yml
@@ -3,6 +3,7 @@ defaultradius: 16
 lang:
   radius:
     self: 'Du hälst dein Item %item% hoch!'
+    custom: '&8(Sichtweite: %radius% Blöcke)'
     target: '%player% hält das Item %item% hoch!'
     noone: '&cEs ist kein Spieler da um dein Item zu sehen :('
   player:
