--- a/src/config.yml
+++ b/src/config.yml
@@ -1,5 +1,9 @@
 texticonrp: false
 defaultradius: 16
+# Cooldown for the radius command in seconds. 
+# 0 to disable cooldowns entirely. 
+# Exempt permission: showitem.cooldownexempt
+cooldown: 10
 lang:
   radius:
     self: 'Du hälst dein Item %item% hoch!'
@@ -9,9 +13,10 @@ lang:
     self: 'Du zeigst %player% das Item %item%'
     target: '%player% zeigt dir das Item %item%'
   error:
-    noitem: 'Du hast kein Item in der Hand welches du zeigen könntest :('
-    playeroffline: 'Der Spieler %player% is nicht online'
+    noitem: '&cDu hast kein Item in der Hand welches du zeigen könntest :('
+    playeroffline: '&cDer Spieler %player% is nicht online'
     noonearound: '&cEs ist kein Spieler da um dein Item zu sehen :('
+    coolden: '&cDu musst noch %remaining%s warten bevor du wieder ein Item zeigen kannst!'
 idmapping:
   SOIL:
     mcid: farmland
