--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,13 +9,13 @@ cooldown: 10
 lang:
   radius:
     self: 'Du hälst dein Item %item% hoch!'
-    custom: '&8(Sichtweite: %radius% Blöcke)'
+    custom: '&8(Sichtweite: %radius%&8 Blöcke)'
     target: '%player% hält das Item %item% hoch!'
   player:
     self: 'Du zeigst %player% das Item %item%'
     target: '%player% zeigt dir das Item %item%'
   error:
     noitem: '&cDu hast kein Item in der Hand welches du zeigen könntest :('
-    playeroffline: '&cDer Spieler %player% is nicht online'
+    playeroffline: '&cDer Spieler %player%&c ist nicht online'
     noonearound: '&cEs ist kein Spieler da um dein Item zu sehen :('
-    coolden: '&cDu musst noch %remaining%s warten bevor du wieder ein Item zeigen kannst!'
+    coolden: '&cDu musst noch %remaining%s&c warten bevor du wieder ein Item zeigen kannst!'
