--- a/src/main/resources/idmapping.yml
+++ b/src/main/resources/idmapping.yml
@@ -26,7 +26,7 @@ idmapping:
     mcid: golden_pickaxe
   GOLD_HOE:
     mcid: golden_hoe
-  GOLD_HOE:
+  GOLD_SWORD:
     mcid: golden_sword
   IRON_SPADE:
     mcid: iron_shovel
